# HR-Dv2

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  requirements.txt  visualise_features.ipynb
app/: GUI.py  __init__.py  batch_process.py  classifiers.py  data_model.py  main.py  positional_bias.ipynb
app/gui_elements/: __init__.py  _small_widgets.py  zoom_scroll_canvas.py
app/pos_bias_data/: default_image_crop_for_dino.tif  sofc_biased_labels_crop_for_dino.tif
dv2/: explanation.ipynb  high_res.py  high_res_pcas.ipynb  high_res_testing.ipynb  measure_loss.py  microstructure.ipynb  transform.py  utils.py  visualise_features.ipynb
experiments/: exprs.json  subset_evals.py  train_probe.py
experiments/object_localization/: dataset.py  main.py
experiments/object_segmentation/: main.py  prep_cub.py  prep_duts.py  prep_test.py
experiments/semantic_seg/: ade.py  voc.py
experiments/weakly_supervised/: visualise_preds.ipynb  visualise_preds.py
hr_dv2/: __init__.py  explanation.ipynb  high_res.py  high_res_pcas.ipynb  patch.py  segment.py  spectral.py  transform.py  utils.py
hr_dv2/wss/: featurisers.py  train.py
install/: conda.yaml  requirements.txt
napari-hrdv2/: setup.cfg
napari-hrdv2/napari_hrdv2/: __init__.py  widget.py  (+1 more)
notebooks/: attention.ipynb  clustering.ipynb  comparisons.ipynb  crf.ipynb  examples.ipynb  explanation.ipynb  high_res_pcas.ipynb  microstructure.ipynb  pca_vis.ipynb  resolution_comparison.ipynb  spectral_demo.ipynb  test.ipynb  test_featup.ipynb  test_rag.ipynb  test_vit.ipynb  threshold_selection.ipynb  video.ipynb
(+46 files in other folders)
