[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr_dv2"
version = "0.0.1"
authors = [
  { name="Anonymous", email="hello@gmail.com"},
]
description = "Module for extracting high-resolution features from the DINOv2 model."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["hr_dv2"]